<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F6C823"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="#00000000"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/home_btn_accueil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/home_icon" />

            <ImageButton
                android:id="@+id/teacher_btn_accueil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/teachertracker_icon" />

            <ImageButton
                android:id="@+id/room_btn_accueil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/roomloupe_icon_black" />

            <ImageButton
                android:id="@+id/location_btn_accueil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/location_icon" />

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <include layout="@layout/activity_accueil"
        android:id="@+id/includedLayout"/>
    <Button
        android:id="@+id/salle_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/salle_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Switch
        android:id="@+id/computersOnlySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/afficher_uniquement_les_salles_informatiques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salle_date_picker" />

    <Button
        android:id="@+id/salle_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/rechercher"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computersOnlySwitch" />

    <ListView
        android:id="@+id/salle_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salle_search_button" />


</androidx.constraintlayout.widget.ConstraintLayout>